--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
+    "storybook-addon-outline": "^1.4.1",
     "styled-components": "^5.3.0"
   },
   "scripts": {
