--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "storybook-addon-outline": "^1.4.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
