--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "bubblegumretro",
   "version": "1.0.0",
   "description": "A whimsical UI library.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "repository": "https://github.com/SentientHousePlant/bubblegumretro",
   "author": "J Harrington",
   "license": "Unlicense",
   "private": false,
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "@babel/preset-react": "^7.14.5",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@storybook/addon-actions": "^6.3.7",
@@ -16,26 +19,27 @@
     "@storybook/addon-links": "^6.3.7",
     "@storybook/react": "^6.3.7",
     "babel-loader": "^8.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "rollup": "^2.56.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "storybook-addon-outline": "^1.4.1"
   },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "storybook-addon-outline": "^1.4.1",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build-lib": "rollup -c"
+    "build-lib": "rollup -c",
+    "watch-lib": "rollup -c -w",
+    "linkup": "yarn link && (cd node_modules/react && yarn link) && (cd node_modules/react-dom && yarn link)",
+    "unlink": "yarn unlink && (cd node_modules/react && yarn unlink) && (cd node_modules/react-dom && yarn unlink)"
   }
 }
